--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <meta name="theme-color" content="#2091f9">
     <meta name="title" content="Aprende CSS desde cero">
     <meta name="description" content="Hola, soy una descripcion que veras cuando  busques de mi tematica en Google.">
+  
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://cursoweb.com/">
+    <meta property="og:title" content="Aprende CSS desde cero.">
+    <meta property="og:description"
+        content="Hola soy una descripción que veras cuando busques algo de mi temática en Google. ">
+    <meta property="og:image" content="http://cursoweb.com/img/social.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://cursowebreina.com/">
+    <meta property="twitter:title" content="Aprende CSS desde cero.">
+    <meta property="twitter:description"
+        content="Hola soy una descripción que veras cuando busques algo de mi temática en Google. ">
+    <meta property="twitter:image" content="http://cursowebreina.com/img/social.jpg">
 </head>
 <body>
     <header class="hero">
